--- a/index.html
+++ b/index.html
@@ -212,10 +212,66 @@
         </main>
     </div>
 
-    <footer>
-        <p>Profesjonalne doradztwo</p>
-        <p>Kompleksowe rozwiązania dla budownictwa</p>
-        <p>20 zakładów produkcyjnych</p>
+    <footer class="bg-light pt-5 pb-3 border-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <h5 class="text-uppercase fw-bold mb-4">BrukExpert</h5>
+                    <ul class="list-unstyled">
+                        <li>📍 ul. Granitowa 12, 00-123 Warszawa</li>
+                        <li>📞 <a href="tel:+48502123987" class="text-dark text-decoration-none">+48 502 123 987</a>
+                        </li>
+                        <li>📧 <a href="mailto:kontakt@brukexpert.pl"
+                                class="text-dark text-decoration-none">kontakt@brukexpert.pl</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <h5 class="text-uppercase fw-bold mb-4">O firmie</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" onclick="showSection('kim')" class="text-dark text-decoration-none">Kim
+                                jesteśmy</a></li>
+                        <li><a href="#" onclick="showSection('kontakt')"
+                                class="text-dark text-decoration-none">Kontakt</a></li>
+                        <li><a href="#" class="text-dark text-decoration-none">Polityka prywatności</a></li>
+                        <li><a href="#" class="text-dark text-decoration-none">Mapa strony</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <h5 class="text-uppercase fw-bold mb-4">Produkty i Usługi</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" onclick="showSection('produkty')" class="text-dark text-decoration-none">Kostka
+                                brukowa</a></li>
+                        <li><a href="#" onclick="showSection('produkty')" class="text-dark text-decoration-none">Płyty
+                                tarasowe</a></li>
+                        <li><a href="#" onclick="showSection('uslugi')" class="text-dark text-decoration-none">Usługi
+                                brukarskie</a></li>
+                        <li><a href="#" class="text-dark text-decoration-none">Porotherm</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <h5 class="text-uppercase fw-bold mb-4">Nasze Wartości</h5>
+                    <ul class="list-unstyled small">
+                        <li>Profesjonalne doradztwo</li>
+                        <li>Kompleksowe rozwiązania</li>
+                        <li>Najwyższa jakość wykonania</li>
+                        <li>Lider innowacji</li>
+                    </ul>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="row">
+                <div class="col-12 text-center">
+                    <p class="mb-0 text-muted small">
+                        &copy; 2025 BrukExpert. Wszelkie prawa zastrzeżone. Projekt z Filipem.
+                    </p>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <!-- Modal produktu -->
