--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div class="content-layout" id="layout">
 
-        <aside class="sidebar" id="sidebar">
+        <aside class="sidebar" id="sidebar" style="display: none;">
             <h3>Filtry i wyszukiwania</h3>
             <div class="search-box">
                 <input type="text" id="searchInput" placeholder="Szukaj">
