--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="onasDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">O nas</a>
+                            data-bs-toggle="dropdown" aria-expanded="false">O Firmie</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#" onclick="showSection('kim')">Kim jesteśmy</a></li>
                             <li><a class="dropdown-item" href="#" onclick="showSection('kontakt')">Kontakt</a></li>
@@ -127,40 +127,40 @@
             <section id="produkty">
                 <div class="produkty">
                     <img src="porotherm.jpg" alt="porotherm" class="img-fluid"
-                        onclick="showProduct('Porotherm', 'Porotherm to marka ceramicznych bloczków...', 'porotherm.jpg')">
+                        onclick="showProduct('Porotherm', 'Porotherm to marka ceramicznych bloczków', 'porotherm.jpg')">
 
                     <img src="Kostka-brukowa-11.jpg" alt="kostka brukowa czerwono-szara" class="img-fluid"
-                        onclick="showProduct('Kostka brukowa', 'Kostka brukowa trwała...', 'Kostka-brukowa-11.jpg')">
+                        onclick="showProduct('Kostka brukowa', 'Kostka brukowa trwała', 'Kostka-brukowa-11.jpg')">
 
                     <img src="Obi.jpg" alt="obi kostka szara" class="img-fluid"
-                        onclick="showProduct('Rządowa Kwadratowa', 'Kostka brukowa Obi...', 'Obi.jpg')">
+                        onclick="showProduct('Rządowa Kwadratowa', 'Kostka brukowa Obi', 'Obi.jpg')">
 
                     <img src="1z.png" alt="kostka modularna" class="img-fluid"
-                        onclick="showProduct('Kostka modularna', 'Płytki różnej wielkości...', '1z.png')">
+                        onclick="showProduct('Kostka modularna', 'Płytki różnej wielkości', '1z.png')">
 
                     <img src="z2.png" alt="kostka jodełka" class="img-fluid"
-                        onclick="showProduct('Jodełka', 'Kostka układana w jodełkę...', 'z2.png')">
+                        onclick="showProduct('Jodełka', 'Kostka układana w jodełkę', 'z2.png')">
 
                     <img src="z3.png" alt="kostka postarzana" class="img-fluid"
-                        onclick="showProduct('Kostka postarzana', 'Kostka o nieregularnych krawędziach...', 'z3.png')">
+                        onclick="showProduct('Kostka postarzana', 'Kostka o nieregularnych krawędziach', 'z3.png')">
 
                     <img src="z4.png" alt="kostka postarzana grafitowa" class="img-fluid"
-                        onclick="showProduct('Kostka grafitowa', 'Kostka w ciemnym kolorze...', 'z4.png')">
+                        onclick="showProduct('Kostka grafitowa', 'Kostka w ciemnym kolorze', 'z4.png')">
 
                     <img src="z6.png" alt="kostka ażurowa" class="img-fluid"
-                        onclick="showProduct('Kratka ekologiczna', 'Bruk ażurowy...', 'z6.png')">
+                        onclick="showProduct('Kratka ekologiczna', 'Bruk ażurowy', 'z6.png')">
 
                     <img src="z7.png" alt="kostka tarasowa" class="img-fluid"
-                        onclick="showProduct('Płyty tarasowe', 'Wielkoformatowe płyty...', 'z7.png')">
+                        onclick="showProduct('Płyty tarasowe', 'Wielkoformatowe płyty', 'z7.png')">
 
                     <img src="z8.png" alt="kostka taras z obrzeżem" class="img-fluid"
-                        onclick="showProduct('Taras z kostki', 'Kompletny taras...', 'z8.png')">
+                        onclick="showProduct('Taras z kostki', 'Kompletny taras', 'z8.png')">
 
                     <img src="z9.png" alt="kostka łukowa" class="img-fluid"
-                        onclick="showProduct('Koci Łeb', 'Wzór wachlarzowo-łukowy...', 'z9.png')">
+                        onclick="showProduct('Koci Łeb', 'Wzór wachlarzowo-łukowy', 'z9.png')">
 
                     <img src="z10.png" alt="kostka jodełka podwójna" class="img-fluid"
-                        onclick="showProduct('Jodełka dwukolorowa', 'Wzór jodełki...', 'z10.png')">
+                        onclick="showProduct('Jodełka dwukolorowa', 'Wzór jodełki', 'z10.png')">
                 </div>
 
             </section>
@@ -208,10 +208,17 @@
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8002.041731098565!2d21.220912106702226!3d52.2175178796848!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ed38d178c3347%3A0x3d0afd5f3413279d!2sGranitowa%2012%2C%2005-077%20Warszawa!5e0!3m2!1spl!2spl!4v1762514391644!5m2!1spl!2spl"></iframe>
                 </div>
             </section>
-
         </main>
     </div>
 
+    <div class="email">
+    <label>Podaj swój adres e-mail, jeżeli chcesz otrzymywać informacje o nowościach</label>
+
+    <div class="email-row">
+        <input type="text" placeholder="Podaj swój email">
+        <input type="submit" value="Wyślij">
+    </div>
+</div>
     <footer class="bg-light pt-5 pb-3 border-top">
         <div class="container">
             <div class="row">
